--- a/java/gradle/ice.gradle
+++ b/java/gradle/ice.gradle
@@ -16,15 +16,15 @@ buildscript {
 apply plugin: com.diffplug.gradle.spotless.SpotlessPlugin
 
 slice {
-    iceHome = new File(project.ext.topSrcDir).getCanonicalPath()
+    includeSearchPath = files("${project.ext.topSrcDir}/slice")
     def defaultIceToolsPath = "${new File(project.ext.topSrcDir).getCanonicalPath()}/cpp/bin"
 
     if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
         def platform = project.findProperty("cppPlatform") ?: "x64"
         def configuration = project.findProperty("cppConfiguration") ?: "Release"
-        iceToolsPath = "$defaultIceToolsPath/$platform/$configuration"
+        toolsPath = "$defaultIceToolsPath/$platform/$configuration"
     } else {
-        iceToolsPath = defaultIceToolsPath
+        toolsPath = defaultIceToolsPath
     }
 }
 
