--- a/java/test/android/controller/build.gradle
+++ b/java/test/android/controller/build.gradle
@@ -77,7 +77,7 @@ android {
     namespace 'com.zeroc.testcontroller'
 
     sourceSets {
-        main {
+        debug {
             slice {
                 srcDir "$topSrcDir/scripts"
             }
