--- a/java/test/android/controller/build.gradle
+++ b/java/test/android/controller/build.gradle
@@ -23,7 +23,6 @@ apply plugin: 'com.zeroc.slice-tools-java'
 def topSrcDir = new File("$rootProject.projectDir/../../../..").getCanonicalPath()
 
 slice {
-    includeSearchPath = files("${topSrcDir}")
     def defaultIceToolsPath = "${topSrcDir}/cpp/bin"
 
     if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
@@ -77,7 +76,7 @@ android {
     namespace 'com.zeroc.testcontroller'
 
     sourceSets {
-        debug {
+        main {
             slice {
                 srcDir "$topSrcDir/scripts"
             }
