Changed csharp .editorconfig to escalate the file scoped namespaces from a suggestion to a warning

--- a/csharp/.editorconfig
+++ b/csharp/.editorconfig
@@ -91,7 +91,7 @@ csharp_prefer_simple_using_statement = true:suggestion
 csharp_prefer_simple_default_expression = true:suggestion
 csharp_style_deconstructed_variable_declaration = true:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
-csharp_style_namespace_declarations = file_scoped:suggestion
+csharp_style_namespace_declarations = file_scoped:warning
 csharp_style_pattern_local_over_anonymous_function = false:suggestion
 csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
