Move slice-tools plugin to java/tools/slice-tools

--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -1,7 +1,7 @@
 // Copyright (c) ZeroC, Inc.
 
 pluginManagement {
-    includeBuild "../tools/gradle"
+    includeBuild "./tools/slice-tools"
 }
 
 // Source projects
