--- a/java/test/android/controller/settings.gradle
+++ b/java/test/android/controller/settings.gradle
@@ -1,4 +1,4 @@
 pluginManagement {
-    includeBuild "../../../../tools/gradle"
+    includeBuild "../../../tools/slice-tools"
 }
 include("build.gradle")
