--- a/csharp/tools/ZeroC.Ice.Slice.Tools.CSharp/ZeroC.Ice.Slice.Tools.CSharp.props
+++ b/csharp/tools/ZeroC.Ice.Slice.Tools.CSharp/ZeroC.Ice.Slice.Tools.CSharp.props
@@ -12,32 +12,49 @@
 
     <!-- default values -->
     <Choose>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\cpp') and $(IceOSName) == 'windows'">
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\..\cpp') and $(IceOSName) == 'windows'">
             <!-- Use the Slice compiler from this source build -->
             <PropertyGroup>
-                <IceHome>$(MSBuildThisFileDirectory)..\..\</IceHome>
-                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\cpp\bin\x64\$(Configuration)\</IceToolsPath>
+                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\..\cpp\bin\x64\$(Configuration)\</IceToolsPath>
             </PropertyGroup>
         </When>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\cpp')">
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\..\cpp')">
             <!-- Use the Slice compiler from this source build -->
             <PropertyGroup>
-                <IceHome>$(MSBuildThisFileDirectory)..\..\</IceHome>
-                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\cpp\bin\</IceToolsPath>
+                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\..\cpp\bin\</IceToolsPath>
             </PropertyGroup>
         </When>
         <Otherwise>
             <PropertyGroup>
                 <!-- Use the Slice compiler from this NuGet package -->
-                <IceHome>$(MSBuildThisFileDirectory)..\</IceHome>
                 <IceToolsPath>$(MSBuildThisFileDirectory)..\tools\$(IceOSName)-$(IceOSArch)</IceToolsPath>
             </PropertyGroup>
         </Otherwise>
     </Choose>
 
+    <!-- Default SliceCompile settings -->
     <ItemDefinitionGroup>
         <SliceCompile>
             <OutputDir>$(MSBuildProjectDirectory)\generated</OutputDir>
         </SliceCompile>
     </ItemDefinitionGroup>
+
+    <Choose>
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\..\slice')">
+            <!-- Default SliceCompile settings for Ice source builds -->
+            <ItemDefinitionGroup>
+                <SliceCompile>
+                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\..\..\slice</IncludeDirectories>
+                </SliceCompile>
+            </ItemDefinitionGroup>
+        </When>
+        <Otherwise>
+            <!-- Default SliceCompile settings -->
+            <ItemDefinitionGroup>
+                <SliceCompile>
+                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\slice</IncludeDirectories>
+                </SliceCompile>
+            </ItemDefinitionGroup>
+        </Otherwise>
+    </Choose>
 </Project>
