--- a/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.csproj
+++ b/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.csproj
@@ -13,7 +13,7 @@
 
     </PropertyGroup>
     <ItemGroup>
-      <Compile Include="..\..\..\csharp\tools\ZeroC.Ice.Slice.Tools\*.cs" />
+      <Compile Include="..\..\..\csharp\tools\ZeroC.Ice.Slice.Tools\Common\*.cs" />
     </ItemGroup>
 
     <ItemGroup>
