--- a/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.targets
+++ b/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.targets
@@ -4,7 +4,7 @@
 
     <!--
     Set the path of the ZeroC.Ice.Slice.Tools.Cpp assembly conditionally based on whether we are using
-    the zeroc.ice.v143 NuGet package or the Ice source distribution.
+    the ZeroC.Ice.Cpp NuGet package or the Ice source distribution.
 
     - For the NuGet package, the assembly is included in the "tasks" directory.
     - For the Ice source distribution, the assembly is taken from the ZeroC.Ice.Slice.Tools.Cpp project
