--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Download C++ Binaries From NuGet feed
         run: |
           New-Item -ItemType Directory -Path "${{ github.workspace }}\packages"
-          nuget install zeroc.ice.v143 -Source ${{ inputs.source_url }} -Version ${{ inputs.ice_version }} -OutputDirectory "${{ github.workspace }}\packages" -Prerelease -ExcludeVersion
+          nuget install ZeroC.Ice.Cpp -Source ${{ inputs.source_url }} -Version ${{ inputs.ice_version }} -OutputDirectory "${{ github.workspace }}\packages" -Prerelease -ExcludeVersion
 
       - name: Build IceGrid GUI
         run: |
@@ -65,7 +65,7 @@ jobs:
         run: dotnet build -c Release -p:Platform=x64
         working-directory: ice/packaging/msi
         env:
-          PackageDir: "${{ github.workspace }}\\packages\\zeroc.ice.v143"
+          PackageDir: "${{ github.workspace }}\\packages\\ZeroC.Ice.Cpp"
           StagingDir: "${{ github.workspace }}\\staging"
           # TODO compute this variable see issue #3558
           VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
