--- a/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.props
+++ b/cpp/tools/ZeroC.Ice.Slice.Tools.Cpp/ZeroC.Ice.Slice.Tools.Cpp.props
@@ -3,16 +3,16 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <!-- default values -->
     <Choose>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\..\cpp')">
-            <!-- Use the Slice compiler from this source build -->
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\ZeroC.Ice.Cpp.nuspec')">
+            <!-- Use the Slice compiler from this NuGet package -->
             <PropertyGroup>
-                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\bin\$(Platform)\$(Configuration)\</IceToolsPath>
+                <IceToolsPath>$(MSBuildThisFileDirectory)..\tools\</IceToolsPath>
             </PropertyGroup>
         </When>
         <Otherwise>
-            <PropertyGroup>
-                <!-- Use the Slice compiler from this NuGet package -->
-                <IceToolsPath>$(MSBuildThisFileDirectory)..\tools\</IceToolsPath>
+            <PropertyGroup >
+                <!-- Use the Slice compiler from this Source distribution -->
+                <IceToolsPath>$(MSBuildThisFileDirectory)..\..\..\cpp\bin\x64\Configuration</IceToolsPath>
             </PropertyGroup>
         </Otherwise>
     </Choose>
@@ -26,19 +26,19 @@
     </ItemDefinitionGroup>
 
     <Choose>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\..\..\slice')">
-            <!-- Default SliceCompile settings for Ice source builds -->
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\ZeroC.Ice.Slice.Tools.nuspec')">
+            <!-- Default SliceCompile settings for NuGet package -->
             <ItemDefinitionGroup>
                 <SliceCompile>
-                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\..\..\slice</IncludeDirectories>
+                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\slice</IncludeDirectories>
                 </SliceCompile>
             </ItemDefinitionGroup>
         </When>
         <Otherwise>
-            <!-- Default SliceCompile settings -->
+            <!-- Default SliceCompile settings for Ice source builds -->
             <ItemDefinitionGroup>
                 <SliceCompile>
-                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\slice</IncludeDirectories>
+                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\..\..\slice</IncludeDirectories>
                 </SliceCompile>
             </ItemDefinitionGroup>
         </Otherwise>
