--- a/cpp/msbuild/.gitignore
+++ b/cpp/msbuild/.gitignore
@@ -1,8 +1,3 @@
 # Nuget
 packages/
-AppPackages/
-BundleArtifacts/
-zeroc.ice.v120/*
-zeroc.ice.v140/*
-zeroc.ice.v142/*
-zeroc.ice.v143/*
+ZeroC.Ice.Cpp/*
