Move Slice files to their respective C# NuGet packages
Fix #3665

--- a/csharp/src/Ice/Ice.csproj
+++ b/csharp/src/Ice/Ice.csproj
@@ -25,6 +25,8 @@
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
+    <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/Ice"/>
+    <Content Include="ZeroC.Ice.props" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
   <Import Project="../../msbuild/ice.sign.targets" />
 </Project>
