--- a/csharp/src/Glacier2/Glacier2.csproj
+++ b/csharp/src/Glacier2/Glacier2.csproj
@@ -29,5 +29,7 @@
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
+    <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/Glacier2"/>
+    <Content Include="ZeroC.Glacier2.props" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
 </Project>
