--- a/csharp/src/IceGrid/IceGrid.csproj
+++ b/csharp/src/IceGrid/IceGrid.csproj
@@ -30,5 +30,7 @@
     <Content Include="../../../LICENSE" Pack="true" PackagePath="/" />
     <Content Include="../../../ICE_LICENSE" Pack="true" PackagePath="/" />
     <Content Include="README.md" Pack="true" PackagePath="/" />
+    <Content Include="@(SliceCompile)" Pack="true" PackagePath="/slice/IceGrid"/>
+    <Content Include="ZeroC.IceGrid.props" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
 </Project>
